2017-02-12	SilverNexus
	* result_list.c: Use non-strdup string duplication, as it is faster.
	* config.h.in: Remove unused define HAVE_STRDUP
	* CMakeLists.txt: Remove check for unused method strdup.

2017-01-11  SilverNexus
	* ErrorLog.c,
	  ErrorLog.h,
	  main.c,
	  search.h: Remove executable permissions from the files.

2017-01-10  SilverNexus
	* test/performance_test/main.c: Consolidate boyer-moore code for readability
	* main.c: Loop optimization on case insensitive searches.

2017-01-09  SilverNexus
	* test/performance_test/main.c: Remove check for define of removed function.

2017-01-08  SilverNexus
	* search.c: Fixed dirent-based search and optimized it a bit.
	  Removed nftw walk, since dirent-based implementation performs
	  better and is more ubiquitous.
	* settings.c: Remove a degree of freedom in the root node ending.
	  A trailing slash in the arg is truncated to provide consistency.
	* main.c: Removed implementation of nftw walk, as it was outperformed.
	* CMakeLists.txt: Removed check for nftw.
	* search.h: Removed code for nftw.
	* config.h.in: Removed define for nftw presence.
	* README: Update to reflect the lack of nftw.

2017-01-07  SilverNexus
	* fileperuser_search.c: Refactor a redundant while-loop check to make
	  a do-while loop. Saves a couple instructions per call of the function.

2017-01-05  SilverNexus
	* search.c: Improve unhandled inode type message on dirent-based search.

2017-01-01  SilverNexus
	* search.c: Add more descriptive default handler to ftw search.
	  Also, have a distinct error message for directories that failed to open.

2016-12-22  SilverNexus
	* CMakeLists.txt: Fix syntax error in Windows build.
	* result_list.c: Make inline compilation occur only when not using MSVC.

2016-12-13  SilverNexus
	* CMakeLists.txt: Refactor to use the built-in build configurations.
	  This should fix Windows builds, too.
	* result_list.c: Add an assertion to the result list addition.

2016-12-06  SilverNexus